unpackaged/main/default/objects/fferpcore__BatchSettings__c/fferpcore__BatchSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that control the behavior of background processes in Foundations.</description>
    <label>FDN Background Processing Settings</label>
</CustomObject>