unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__BillingDocumentCalculateTaxScopeSize__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BillingDocumentCalculateTaxScopeSize__c</fullName>
    <description>Maximum number of documents to be processed in one go when calculating tax for billing documents.</description>
    <label>Billing Doc Calculate Tax Scope Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>