unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__Chatter__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatter Notification</label>
    <type>Checkbox</type>
</CustomField>