unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__Email__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notification</label>
    <type>Checkbox</type>
</CustomField>