unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__MaximumQueueSize__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MaximumQueueSize__c</fullName>
    <label>Batch System Maximum Queue Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>