unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__MessageDeletionScopeSize__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MessageDeletionScopeSize__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Message Deletion Batch Scope Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>