unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__MessageDeliveryErrorDetectionScopeSize__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MessageDeliveryErrorDetectionScopeSize__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Overrides the automatic calculation of the number of messages processed when detecting errors in a batch. If blank, the number of messages is calculated based on the worst case scenario.</description>
    <label>Error Detection Scope Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>