unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__MessageDeliveryMaxLoopCount__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MessageDeliveryMaxLoopCount__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Message Delivery Max Loop Count</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>