unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__MessageDeliveryRoutingScopeSize__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MessageDeliveryRoutingScopeSize__c</fullName>
    <defaultValue>null</defaultValue>
    <description>Overrides the automatic calculation of the number of messages to be routed for delivery in a batch. If blank, the number of messages is calculated based on the worst case scenario.</description>
    <label>Message Delivery Routing Scope Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>