unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__NotificationRecipients__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__NotificationRecipients__c</fullName>
    <inlineHelpText>Separate email addresses using semicolons (;)  This field only applies to email and Chatter notifications. Users may not have tasks.</inlineHelpText>
    <label>Notification on objects</label>
    <type>TextArea</type>
</CustomField>