unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__SequenceEventSplittingSize__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SequenceEventSplittingSize__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Specifies how many records may be sent in a single Sequence Request event.</description>
    <label>Sequence Event Splitting Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>