unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__SequenceGenerationScopeSize__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SequenceGenerationScopeSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Specifies how many records to be processed at a time, during sequence generation.</description>
    <label>Sequence Generation Scope Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>