unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__SequenceHandlerMaxRecords__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SequenceHandlerMaxRecords__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Specifies how many records the Sequence Event Handler may attempt to process at a time.</description>
    <label>Sequence Event Handler Maximum Records</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>