unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__SequenceHandlerMaxSObjectTypes__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SequenceHandlerMaxSObjectTypes__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Specifies how many different SObjectTypes the Sequence Event Handler may attempt to process at a time.</description>
    <label>Sequence Event Handler Max SObjectTypes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>