unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__Task__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Notification</label>
    <type>Checkbox</type>
</CustomField>