unpackaged/main/default/objects/fferpcore__BatchSettings__c/fields/fferpcore__UserInformationManageUserScopeSize__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__UserInformationManageUserScopeSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Maximum number of records to process in one go when creating, updating, deactivating and activating Salesforce users for pending user information records.</description>
    <label>Manage User Scope Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>